test/force-app/main/default/objects/Get_Document__c/fields/Condition_paiement__c.field-meta.xml
<CustomField>
    <fullName>Condition_paiement__c</fullName>
    <label>Condition paiement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>