test/force-app/main/default/objects/Get_Document__c/fields/Description_du_document__c.field-meta.xml
<CustomField>
    <fullName>Description_du_document__c</fullName>
    <label>Description du document</label>
    <type>TextArea</type>
</CustomField>