test/force-app/main/default/objects/Get_Document__c/fields/Devise_DEB__c.field-meta.xml
<CustomField>
    <fullName>Devise_DEB__c</fullName>
    <label>Devise (comptabilité)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>