test/force-app/main/default/objects/Get_Document__c/fields/Doc_Brouillon__c.field-meta.xml
<CustomField>
    <fullName>Doc_Brouillon__c</fullName>
    <label>Doc Brouillon</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brouillon</fullName>
            </value>
            <value>
                <fullName>Actif</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>