test/force-app/main/default/objects/Get_Document__c/fields/DOC_Deb_Resp_Creation__c.field-meta.xml
<CustomField>
    <fullName>DOC_Deb_Resp_Creation__c</fullName>
    <label>DOC Deb Resp Création</label>
    <length>255</length>
    <type>Text</type>
</CustomField>