test/force-app/main/default/objects/Get_Document__c/fields/DOC_Etat_Facture__c.field-meta.xml
<CustomField>
    <fullName>DOC_Etat_Facture__c</fullName>
    <label>DOC Etat Facture</label>
    <length>255</length>
    <type>Text</type>
</CustomField>