test/force-app/main/default/objects/Get_Document__c/fields/Doc_Projet__c.field-meta.xml
<CustomField>
    <fullName>Doc_Projet__c</fullName>
    <label>Doc Projet</label>
    <referenceTo>Projet__c</referenceTo>
    <relationshipLabel>Get Documents</relationshipLabel>
    <relationshipName>Get_Documents</relationshipName>
    <type>MasterDetail</type>
</CustomField>