test/force-app/main/default/objects/Get_Document__c/fields/Etat_document__c.field-meta.xml
<CustomField>
    <fullName>Etat_document__c</fullName>
    <label>Etat document</label>
    <length>100</length>
    <type>Text</type>
</CustomField>