test/force-app/main/default/objects/Get_Document__c/fields/ID_Document__c.field-meta.xml
<CustomField>
    <fullName>ID_Document__c</fullName>
    <label>ID Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>