test/force-app/main/default/objects/Get_Document__c/fields/ID_journal_commande__c.field-meta.xml
<CustomField>
    <fullName>ID_journal_commande__c</fullName>
    <label>ID journal commande</label>
    <length>255</length>
    <type>Text</type>
</CustomField>