test/force-app/main/default/objects/Get_Document__c/fields/Lien_document_vers_Therefore__c.field-meta.xml
<CustomField>
    <fullName>Lien_document_vers_Therefore__c</fullName>
    <label>Lien document</label>
    <type>Url</type>
</CustomField>