test/force-app/main/default/objects/Get_Document__c/fields/Montant_DEB__c.field-meta.xml
<CustomField>
    <fullName>Montant_DEB__c</fullName>
    <label>Montant (devise étrangère)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>