test/force-app/main/default/objects/Get_Document__c/fields/Montant_document_Num__c.field-meta.xml
<CustomField>
    <fullName>Montant_document_Num__c</fullName>
    <formula>IF(ISBLANK(Montant_document__c), 0, VALUE(Montant_document__c))</formula>
    <label>Montant document (numérique)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>