test/force-app/main/default/objects/Get_Document__c/fields/Nom_Destinataire__c.field-meta.xml
<CustomField>
    <fullName>Nom_Destinataire__c</fullName>
    <label>Nom du destinataire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>