test/force-app/main/default/objects/Get_Document__c/fields/numero_document__c.field-meta.xml
<CustomField>
    <fullName>numero_document__c</fullName>
    <label>numéro document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>