test/force-app/main/default/objects/Get_Document__c/fields/Paiement_client_recevoir__c.field-meta.xml
<CustomField>
    <fullName>Paiement_client_recevoir__c</fullName>
    <label>Paiement client à recevoir</label>
    <length>50</length>
    <type>Text</type>
</CustomField>