test/force-app/main/default/objects/Get_Document__c/fields/Ponderation_Num__c.field-meta.xml
<CustomField>
    <fullName>Ponderation_Num__c</fullName>
    <formula>IF(ISBLANK(Ponderation_pour_les_offres__c), 0, VALUE(Ponderation_pour_les_offres__c))</formula>
    <label>Pondération (numérique)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>