test/force-app/main/default/objects/Get_Document__c/fields/Solde_a_payer_ME__c.field-meta.xml
<CustomField>
    <fullName>Solde_a_payer_ME__c</fullName>
    <label>Solde à payer (devise étrangère)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>