test/force-app/main/default/objects/Get_Document__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ID_Document__c</columns>
    <columns>Doc_Projet__c</columns>
    <columns>Adresse_Compte__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les documents</label>
</ListView>